QA-11114: Fixed issue with Side Panel Header shifting position when page is loading

--- a/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_sidepanel.scss
@@ -2439,6 +2439,12 @@ body[data-edit-window-style="settings"] {
 		}
 	}
 
+	&.x-masked {
+		&::before {
+			position: relative;
+		}
+	}
+
 
 	&::before {
 		content: $text_site_settings;
